--- a/FSTan/FSTan.fsproj
+++ b/FSTan/FSTan.fsproj
@@ -6,11 +6,15 @@
 
   <ItemGroup>
     
+
+    
     <Compile Include="HKT.fs" />
+    <Compile Include="Show.fs" />
     <Compile Include="Monoid.fs" />
     <Compile Include="Functor.fs" />
     <Compile Include="Applicative.fs" />
     <Compile Include="Monad.fs" />
+    <Compile Include="Data\State.fs" />
     <Compile Include="Data\List.fs" />
     <Compile Include="Data\Maybe.fs" />
   </ItemGroup>
