--- a/FSTan/FSTan.fsproj
+++ b/FSTan/FSTan.fsproj
@@ -5,18 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    
-
-    
     <Compile Include="HKT.fs" />
     <Compile Include="Show.fs" />
     <Compile Include="Monoid.fs" />
     <Compile Include="Functor.fs" />
     <Compile Include="Applicative.fs" />
     <Compile Include="Monad.fs" />
-    <Compile Include="Data\State.fs" />
+    <Compile Include="Data\Either.fs" />
     <Compile Include="Data\List.fs" />
     <Compile Include="Data\Maybe.fs" />
+    <Compile Include="Control\State.fs" />
   </ItemGroup>
 
 </Project>
