--- a/FSTan/FSTan.fsproj
+++ b/FSTan/FSTan.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="Functor.fs" />
     <Compile Include="Applicative.fs" />
     <Compile Include="Monad.fs" />
+    <Compile Include="MonadTrans.fs" />
     <Compile Include="Data\Either.fs" />
     <Compile Include="Data\List.fs" />
     <Compile Include="Data\Maybe.fs" />
