--- a/FSTan/FSTan.fsproj
+++ b/FSTan/FSTan.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="Applicative.fs" />
     <Compile Include="Monad.fs" />
     <Compile Include="MonadTrans.fs" />
+    <Compile Include="Data\Identity.fs" />
     <Compile Include="Data\Either.fs" />
     <Compile Include="Data\List.fs" />
     <Compile Include="Data\Maybe.fs" />
